[tool.poetry]
name = "greentech"
version = "0.1.0"
description = ""
authors = ["Anders Jess Pedersen <anders.j.pedersen@alexandra.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
ipykernel = "^6.20.2"
plotly = "^5.12.0"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.0"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
